samples/_failures_safe/1761612387_6b63b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38a444ac.c: In function ‘parser_init’:
./samples/SAFE/__tmp_38a444ac.c:154:11: error: ‘struct Parser’ has no member named ‘has’
  154 |     parser->has
      |           ^~
./samples/SAFE/__tmp_38a444ac.c:154:16: error: expected ‘;’ at end of input
  154 |     parser->has
      |                ^
      |                ;
./samples/SAFE/__tmp_38a444ac.c:154:5: error: expected declaration or statement at end of input
  154 |     parser->has
      |     ^~~~~~
